--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pastebin-api": "^7.0.0",
     "ping-monitor": "^0.8.2",
     "request": "^2.88.2",
+    "mime-types": "^2.1.35",
     "semver": "^7.5.4",
     "sequelize": "^6.35.2",
     "simple": "^0.2.0",
