--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "usetube": "^2.2.7",
     "youtube-search-api": "^1.1.0",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "g4f": "^1.4.2"
   }
 }
