--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
     "eventDisabled": [],
     "EMAIL": "",
     "OWNERLINK": "https://www.facebook.com/propertynilove.magallnes",
-    "BOTOWNER": "Jonell Magallanes",
+    "BOTOWNER": "Jonell Magallanes and Kingivan Periña",
     "FCA": "fca-project-orion",
     "PASSWORD": "",
     "OTPKEY": "",
@@ -28,7 +28,7 @@
     "PREFIX": "?",
     "ADMINBOT": [
         "100036956043695",
-        "",
+        "100024837104576",
         "",
         "",
         "",
