--- a/config.json
+++ b/config.json
@@ -19,16 +19,16 @@
     ],
     "eventDisabled": [],
     "EMAIL": "",
-    "OWNERLINK": "https://www.facebook.com/propertynilove.magallnes",
-    "BOTOWNER": "Jonell Magallanes and Kingivan Periña",
+    "OWNERLINK": "https://www.facebook.com/profile.php?id=100084553454309&mibextid=ZbWKwL",
+    "BOTOWNER": "Tantan",
     "FCA": "fca-project-orion",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "HAROLD HUTCHINS",
-    "PREFIX": "?",
+    "BOTNAME": "Tanley[love ni raiza]",
+    "PREFIX": "!",
     "ADMINBOT": [
-        "100036956043695",
-        "100024837104576",
+        "100084553454309",
+        "100084553454309",
         "",
         "",
         "",
@@ -37,12 +37,12 @@
         "",
         ""
     ],
-    "OWNER": "Jonell Magallanes",
+    "OWNER": "Tantan",
     "AGE": "N/A",
     "GENDER": "Male",
-    "OWNERID": "61552791681423",
-    "BOTCREATOR": "Jonell Magallanes",
-    "FACEBOOK": "https://www.facebook.com/propertynilove.magallnes",
+    "OWNERID": "100084553454309",
+    "BOTCREATOR": "Tantan",
+    "FACEBOOK": "https://www.facebook.com/profile.php?id=100084553454309&mibextid=ZbWKwL",
     "rankupmode": "gifcanvas",
     "BanTemplate": "disable",
     "AutoOffBot": "disable",
@@ -53,7 +53,7 @@
     "AutoGreetWithSticker": "enable",
     "AutoGreetSendPerHour": "1",
     "AutoPost": "disable",
-    "AutoPostText": "Hindi ako minahal (every 12 hours)",
+    "AutoPostText": "Hindi ako minahal ni raiza (every 12 hours)",
     "AutoPostPerHour": "12",
     "AutoPostGreet": "disable",
     "AutoPostGreetPostPerHour": "6",
